CodeCov implementation completed, finally